# call-review

./: .env.example  .gitignore  README.md  pyproject.toml
config/: properties.txt  staff_names  transcription_prompt.txt
sample_data/archive/WIOGEN-TS/2026/04/02/: aud-0_1378435177@10.100.5.22-BBEA.wav.transcript.json  aud-0_1378435177@10.100.5.22-BBEA.wav.transcript.txt
sample_data/cx_incoming/: TXR27e8beddf4bc764c791808577e5e7d8d.mp3.transcript.json  TXR27e8beddf4bc764c791808577e5e7d8d.mp3.transcript.txt  TXR405fcee7bb9b6fc1c1eabc987c40a362.mp3.transcript.json  TXR405fcee7bb9b6fc1c1eabc987c40a362.mp3.transcript.txt  TXRfffd530e04454e9ea71ebf486f54e839.mp3.transcript.json
scripts/: backfill_vip_call_time.py  init_db.py  run_web.py  run_worker.py  test_transcribe.py
src/callreview/: __init__.py  config.py  db.py  ingest.py  logging_utils.py  models.py  processing.py  utils.py  web.py  worker.py
src/callreview/static/: app.css  app.js
src/callreview/templates/: detail.html  index.html
